Kubernetes_Version/mongodb_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo
        ports:
        - containerPort: 27018
        # env:
        # - name: MONGO_INITDB_ROOT_USERNAME
        #   valueFrom:
        #     secretKeyRef:
        #       name: mongodb-secret
        #       key: mongo-root-username
        # - name: MONGO_INITDB_ROOT_PASSWORD
        #   valueFrom: 
        #     secretKeyRef:
        #       name: mongodb-secret
        #       key: mongo-root-password
