Kubernetes_Version/frontend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    run: frontend
spec:
  ports:
  - port: 3001 # WHERE THE APP IS LISTENING INSIDE THE CONTAINER
    targetPort: 3001 # PORT ON MACHINE WHERE THE APP WILL LISTEN
    protocol: TCP
  selector:
    run: frontend
