Kubernetes_Version/mongodb_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017 # PORT INSIDE THE CONTAINER WHERE APP IS LISTENING
      targetPort: 27018 # PORT ON MACHINE WHERE THE APP WILL LISTEN
