Kubernetes_Version/appointment_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
spec:
  # defaultBackend: #If none of the hosts or paths match the HTTP request in the Ingress objects, the traffic is routed to your default backend. An Ingress with no rules sends all traffic to a single default backend. 
  #   resource: # A Resource backend is an ObjectRef to another Kubernetes resource within the same namespace as the Ingress object. A Resource is a mutually exclusive setting with Service, and will fail validation if both are specified. A common usage for a Resource backend is to ingress data to an object storage backend with static assets.
  #     apiGroup: k8s.example.com
  #     kind: StorageBucket # CHECK THIS OUT
  #     name: static-assets
  rules:
  # - host: foo.bar.com
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            # name: frontend-service/home
            port:
              number: 3001
      - path: /timetables/
        pathType: Prefix
        backend:
          service:
            name: timetable-service
            port:
              number: 5001
